Added two codes after taking one from the community mailing list.

--- a/Zagg_Protection_Discount_Number.mw
+++ b/Zagg_Protection_Discount_Number.mw
@@ -6,9 +6,11 @@ Please edit this page, remove the number you used and add "I used this code" in 
 
 '''When adding your discount code to the list please do so sorted by chronological date expiration''' (normally at the bottom).
 
-Here's the list
-All been used...
+(This list should grow quicker than it's used, please add your entries after using)
 
+Here's the list
+* tfp9nh (end date: one-time-use, issued on 2 September)
+* zr416v (end date: one-time-use, issued on 2 September)
 
 
 Also, a 20%-off code . Can be reused.
