--- a/Zagg_Protection_Discount_Number.mw
+++ b/Zagg_Protection_Discount_Number.mw
@@ -8,12 +8,12 @@ Please edit this page, remove the number you used and add "I used this code" in 
 
 (This list should grow quicker than it's used, please add your entries after using)
 
-Here's the list
+Here's the list (20%)
 * tfp9nh (end date: one-time-use, issued on 2 September)
 * zr416v (end date: one-time-use, issued on 2 September)
 
 
-Also, a 20%-off code . Can be reused.
+Also, a 20%-off code . Can be reused. (Appears to be 15%)
 
 *techound1    (end date: unknown)
 
