*Empty MediaWiki Message*

--- a/Gpsdrive%2Fcs.mw
+++ b/Gpsdrive%2Fcs.mw
@@ -2,7 +2,7 @@
 
 == Informace ==
 
-GpsDrive je navigační systém založený na GTK2.
+GpsDrive je navigační systém založený na GTK2. Nedokáže plánovat cestu :(
 * Web: [www.gpsdrive.de]
 * Screenshoty: [http://www.gpsdrive.de/screenshots/index.shtml]
 
