*Empty MediaWiki Message*

--- a/Zagg_Protection_Discount_Number.mw
+++ b/Zagg_Protection_Discount_Number.mw
@@ -12,6 +12,8 @@ Here's the list (20%)
 * zr416v (end date: one-time-use, issued on 2 September)
 * y31xs6 (end date: one-time-use, issued on 2 September)
 * rxj94z (end date: one-time-use, issued on 2 September)
+* d1f40m (purchased on 25 August)
+* mv23sq (purchased on 25 August)
 
 Also, a 20%-off code . Can be reused. (Appears to be 15%)
 
