--- a/Edje.mw
+++ b/Edje.mw
@@ -6,7 +6,7 @@ Edje uses *.edj Files as binary-configuration files and *.edc as the source of s
 For compiling an *.edc file to an *.edj file you need: edje_cc
 For decompiling an *.edj file to an *.edc file you need: edje_decc (you might want to do this to learn about how such a file has to look like)
 
-= Installation =
+= Installation under Ubuntu=
 You can install edje_cc and edje_decc for Ubuntu by adding this source to your /etc/apt/sources.lst:
  deb http://e17.dunnewind.net/ubuntu hardy e17
 or
