*Empty MediaWiki Message*

--- a/Edje.mw
+++ b/Edje.mw
@@ -6,7 +6,19 @@ Edje uses *.edj Files as binary-configuration files and *.edc as the source of s
 For compiling an *.edc file to an *.edj file you need: edje_cc
 For decompiling an *.edj file to an *.edc file you need: edje_decc (you might want to do this to learn about how such a file has to look like)
 
-= Installation under Ubuntu=
+= Installation = 
+== Installation on Freerunner ==
+To compile/decompile Edje files directly at your freerunner, you first need to install several packages.
+You need at least ''edje-utils'' which provides the compiler and decompiler tools.
+Depending on the contents of the theme, you need additional modules which are provided by ''libevas-*'' packages.
+For example, to be able to load and save JPG files, you need both the ''libevas-loader-jpeg'' and ''libevas-saver-jpg'' packages.
+
+Issuing the following command should install needed files for the most cases:
+ opkg install edje-utils libevas-loader-jpeg libevas-loader-png libevas-loader-svg libevas-saver-jpeg libevas-saver-png
+
+
+
+== Installation on Ubuntu ==
 You can install edje_cc and edje_decc for Ubuntu by adding this source to your /etc/apt/sources.lst:
  deb http://e17.dunnewind.net/ubuntu hardy e17
 or
