--- a/Edje.mw
+++ b/Edje.mw
@@ -1,6 +1,8 @@
 = Edje =
 Is a configuration-file format which origins of [http://www.enlightenment.org/ Enlightenment 17]. It is used by [[Openmoko]] and [[Illume]] for configuring a lot of the look of [[Openmoko]] and its applications. It allows you, for example, to change the background image but is much more powerful then that.
 
+Please note, however, that for [[CustomizeApplicationIcons|changing application icons]] it is not necessary to compile theme files.
+
 Edje uses *.edj Files as binary-configuration files and *.edc as the source of such an *.edj file.
 
 For compiling an *.edc file to an *.edj file you need: edje_cc
