Added Mike Jones

--- a/Openmoko_Local_Groups:_Manchester.mw
+++ b/Openmoko_Local_Groups:_Manchester.mw
@@ -18,6 +18,12 @@ Welcome to Openmoko Manchester!
 |User & aspiring developer
 |Manchester suburbs
 |[[Image: Moko.jpg|center]] (GTA02)
+|-
+|Mike Jones ([http://wiki.openmoko.org/wiki/User:Nimpo nimpo])
+|C, C++, Perl, Security/Cryptography, Grid
+|User & potential developer, time permitting
+|Manchester, Rusholme
+|[[Image: Moko.jpg|center]] (GTA02)
 |}
 
 
