*Empty MediaWiki Message*

--- a/Customize_Application_Icons.mw
+++ b/Customize_Application_Icons.mw
@@ -1,4 +1,6 @@
-=FSO and OM 2008.8=
+This guide briefly describes how you can customize the application icons shown on the home screen.
+
+= FSO and OM 2008.8 =
 At FSO application icons are stored below ''/usr/share/pixmaps/''. Those icons are just little image files ou might already know from your PC desktop. To avoid scaling the images should be of 64x64 pixels.
 The icons are referenced by the <tt>.desktop</tt> files in ''/usr/share/applications/''.
 
