/* FSO and OM 2008.8 */

--- a/Customize_Application_Icons.mw
+++ b/Customize_Application_Icons.mw
@@ -14,3 +14,8 @@ This desktop entry references an image "my-icon" which, because of the missing f
 
 You can also provide a full path, for example:
  Icon=/home/root/my-icon.png
+
+
+[[Category:Om 2008.8]]
+[[Category:Guides]]
+[[Category:Customization]]
