--- a/Edje.mw
+++ b/Edje.mw
@@ -8,6 +8,8 @@ Edje uses *.edj Files as binary-configuration files and *.edc as the source of s
 For compiling an *.edc file to an *.edj file you need: edje_cc
 For decompiling an *.edj file to an *.edc file you need: edje_decc (you might want to do this to learn about how such a file has to look like)
 
+Edje themes are stored at ''usr/share/enlightenment/data/themes''.
+
 = Installation = 
 == Installation on Freerunner ==
 To compile/decompile Edje files directly at your freerunner, you first need to install several packages.
