--- a/Edje.mw
+++ b/Edje.mw
@@ -35,3 +35,6 @@ After that you can install the needed tools with:
 = Links =
 * [http://docs.enlightenment.org/api/edje/edje-reference.pdf docs.enlightenment.org] - offical edje documentation
 * [http://52grad.de/.stuff/freerunner/ 52grad.de] - example on using edj files
+
+
+[[Category:Customization]]
