/* Installation on Freerunner */

--- a/Edje.mw
+++ b/Edje.mw
@@ -18,10 +18,7 @@ You need at least ''edje-utils'' which provides the compiler and decompiler tool
 Depending on the contents of the theme, you need additional modules which are provided by ''libevas-*'' packages.
 For example, to be able to load and save JPG files, you need both the ''libevas-loader-jpeg'' and ''libevas-saver-jpg'' packages.
 
-Issuing the following command should install needed files for the most cases:
- opkg install edje-utils libevas-loader-jpeg libevas-loader-png libevas-loader-svg libevas-saver-jpeg libevas-saver-png
-
-
+To successfully compile .edj files, you also need a C++ compiler and the embryo_cc scripting language compiler installed.
 
 == Installation on Ubuntu ==
 You can install edje_cc and edje_decc for Ubuntu by adding this source to your /etc/apt/sources.lst:
