*Empty MediaWiki Message*

--- a/Edje.mw
+++ b/Edje.mw
@@ -12,13 +12,6 @@ Edje themes are stored at ''usr/share/enlightenment/data/themes''.
 Which theme gets loaded by default, is defined in ''/etc/enlightenment/default_profile''.
 
 = Installation = 
-== Installation on Freerunner ==
-To compile/decompile Edje files directly at your freerunner, you first need to install several packages.
-You need at least ''edje-utils'' which provides the compiler and decompiler tools.
-Depending on the contents of the theme, you need additional modules which are provided by ''libevas-*'' packages.
-For example, to be able to load and save JPG files, you need both the ''libevas-loader-jpeg'' and ''libevas-saver-jpg'' packages.
-
-To successfully compile .edj files, you also need a C++ compiler and the embryo_cc scripting language compiler installed.
 
 == Installation on Ubuntu ==
 You can install edje_cc and edje_decc for Ubuntu by adding this source to your /etc/apt/sources.lst:
@@ -29,6 +22,17 @@ or
  deb http://e17.dunnewind.net/ubuntu feisty e17
 After that you can install the needed tools with:
  sudo apt-get update && sudo apt-get install libedje-bin
+
+== Installation on Debian ==
+TODO
+
+== Installation on Freerunner ==
+To compile/decompile Edje files directly at your freerunner, you first need to install several packages.
+You need at least ''edje-utils'' which provides the compiler and decompiler tools.
+Depending on the contents of the theme, you need additional modules which are provided by ''libevas-*'' packages.
+For example, to be able to load and save JPG files, you need both the ''libevas-loader-jpeg'' and ''libevas-saver-jpg'' packages.
+
+To successfully compile .edj files, you also need a C++ compiler and the embryo_cc scripting language compiler installed.
 
 = Links =
 * [http://docs.enlightenment.org/api/edje/edje-reference.pdf docs.enlightenment.org] - offical edje documentation
