*Empty MediaWiki Message*

--- a/Host-based_development_with_Xoo_and_Xephyr.mw
+++ b/Host-based_development_with_Xoo_and_Xephyr.mw
@@ -1,4 +1,5 @@
 This page introduces you to the most efficient way to create new software for the Openmoko platform. Note that there is a VMware image where this environment has been prebuilt for you.
+''Does anyone know where to find this VMWare image??''
 
 ==Host-based development==
 
