--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -3215,6 +3215,8 @@ Status: 1/10
 *[mailto:robotex.ag@mail.ru robotex] Robotex - 1xNeo FreeRunner
 ==== Kiev ====
 *[mailto:lvccgd@gmail.com lvccgd] Vladimir - 1xNeo FreeRunner
+==== Zhitomir ====
+*[mailto:ihorman@gmail.com ihorman] Ihor - 1xNeo FreeRunner
 
 == USA ==
 === Arizona ===
