/* Why are the buttons in TangoGPS too large? The zoom out is missing! */

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -112,22 +112,22 @@ See [[Om_2007.2#Known_Issues|2007.2 Known Issues]]
 
 ==== Why are the buttons in TangoGPS too large? The zoom out is missing! ====
 
-:There is no GTK engine or theme installed with the ASU build.  Fortunately, this is easy to fix!
+There is no GTK engine or theme installed with the ASU build.  Fortunately, this is easy to fix!
 
-:At a terminal:
+At a terminal:
 :<tt># opkg install moko-gtk-theme moko-gtk-engine</tt>
 :<tt># ln -s /usr/share/themes/Moko/gtk-2.0/gtkrc /home/root/.gtkrc-2.0</tt>
 
-:Now you have pretty colors and widgets, but the font is too big.  Edit <tt>/usr/share/themes/Moko/gtk-2.0/gtkrc</tt> in your favorite text editor and add the following line:
+Now you have pretty colors and widgets, but the font is too big.  Edit <tt>/usr/share/themes/Moko/gtk-2.0/gtkrc</tt> in your favorite text editor and add the following line:
 :<tt>gtk-font-name = "Sans 4"</tt>
 
-:To use the openmoko icon theme, install it with:
+To use the openmoko icon theme, install it with:
 :<tt># opkg install openmoko-icon-theme-standard2</tt>
 
-:and enable it editing the <tt>/usr/share/themes/Moko/gtk-2.0/gtkrc</tt> adding the line:
+and enable it editing the <tt>/usr/share/themes/Moko/gtk-2.0/gtkrc</tt> adding the line:
 :<tt>gtk-icon-theme-name="openmoko-standard"</tt>
 
-:You shouldn't even need to restart the device, although you will need to restart any GTK-based programs.
+You shouldn't even need to restart the device, although you will need to restart any GTK-based programs.
 
 == Distribution Customization ==
 
