added what to do if fail to register

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -86,6 +86,13 @@ A list of examples of "closed" behaviour has been started here - [[Problems of t
 
 See [[Getting_Started_with_your_Neo_FreeRunner|Getting Started with your Neo FreeRunner]]
 
+=== My FreeRunner won't register to my cellphone network. What should I do? ===
+
+# Please document your existing SIM card and provider in the table [[FreeRunner_unable_to_work_with_3G_SIM_cards|here]]
+# If the table mentioned above shows any SIM cards known to work with your provider, make note of these numbers
+# Contact your network provider and request a new SIM card. You may wish to print out the table mentioned above and bring it with you to the store.
+# Add your experience with the new SIM card to the table mentioned above
+
 === 2007.2 factory default software image ===
 
 ==== Where can I download and reinstall the factory default image? ====
