--- a/Wiki_Maintainers.mw
+++ b/Wiki_Maintainers.mw
@@ -24,7 +24,7 @@
 * [[User:MinhHaDuong|Minh Ha-Duong]]
 * [[User:Brianwc|Brianwc]]
 * [[User:Marko Knöbl|Marko Knöbl]]
-* [[User:Michael Shiloh|Michaelshiloh]]
+* [[User:Michaelshiloh|Michael Shiloh]]
 
 == See also ==
 
