--- a/Edje.mw
+++ b/Edje.mw
@@ -24,7 +24,8 @@ After that you can install the needed tools with:
  sudo apt-get update && sudo apt-get install libedje-bin
 
 == Installation on Debian ==
-TODO
+The packages for Ubuntu look like they are compatible with debian.
+Verified is: feisty<->lenny
 
 == Installation on Freerunner ==
 To compile/decompile Edje files directly at your freerunner, you first need to install several packages.
