/* Notes about expected battery life */

--- a/Neo_FreeRunner_Battery.mw
+++ b/Neo_FreeRunner_Battery.mw
@@ -12,15 +12,14 @@ For more information, see the GTA01 battery info at [[Neo1973 Battery]]
 === Notes about expected battery life ===
 Battery life is a work in progress. The power saving software is in a very rudimentary state. At the moment 12h is about the most (note though a [http://lists.openmoko.org/pipermail/community/2008-July/020339.html recent result of at least 21h], mostly in suspend, with multiple short wakeups, on the predecessor device GTA01). A week standby and 6 hours talk, 20 hours mp3 might be attainable when power saving software is complete.
 
+== Make sure your battery never discharges completely. ==
 
- Make sure that the battery never discharges completely. This is an issue because 
- the internal charging circuitry can not be turned on until the FreeRunner has 
- booted, and booting through USB power alone does not work.
- (If you have the newest kernel images, you should be safe due to a software fix.)
+This is an issue because the internal charging circuitry can not be turned on until the FreeRunner has booted, and booting through USB power alone does not work.
 
-Actually this isn't true for all FreeRunner devices, I got flawless boot on GTA02 DateCode 20080626, when holding AUX while insering USB-plug of Wallwart powersupply.<br>Also I don't see how new kernel image could help on this issue, other than if it stopped DIScharging of battery in time<br><br>
+=== What to do if your battery has become completely discharged ===
+
 Should the battery become  completely discharged, your options are: 
-* Try booting with Wallwart USB-powersupply (maybe hold AUX during inserting USB-plug)
+* Try booting with Wallwart USB-power supply (hold AUX button while inserting USB-plug)
 * Use external stand-alone charger (compatible with the Nokia BL-5C battery) 
 * Boot the FreeRunner with an alternative battery, or with a spare GTA01 or GTA02 battery, plug USB power, then switch to the empty battery. 
 * Boot the FreeRunner with a 4.5VDC external power source (steady hand and great care involved), plug USB power, then insert the empty battery.
