--- a/Neo_FreeRunner_Battery.mw
+++ b/Neo_FreeRunner_Battery.mw
@@ -25,7 +25,7 @@ Should the battery become  completely discharged, your options are:
 * Boot the FreeRunner with a 4.5VDC external power source (steady hand and great care involved), plug USB power, then insert the empty battery.
 * Charge the battery directly, [http://wiki.openmoko.org/wiki/Charging_battery_directly see here], how I did that.
 
-=== Compatible Replacement Batteries ===
+== Compatible Replacement Batteries ==
 
 Other known FreeRunner-compatible batteries include the BL-series (BL-4X, BL-5X) from Nokia, and their third-party equivalents.
 These may not work to revive a device and may not report charge information.
