/* What to do if your battery has become completely discharged */

--- a/Neo_FreeRunner_Battery.mw
+++ b/Neo_FreeRunner_Battery.mw
@@ -20,10 +20,12 @@ This is an issue because the internal charging circuitry can not be turned on un
 
 Should the battery become  completely discharged, your options are: 
 * Try booting with Wallwart USB-power supply (hold AUX button while inserting USB-plug)
-* Use external stand-alone charger (compatible with the Nokia BL-5C battery) 
-* Boot the FreeRunner with an alternative battery, or with a spare GTA01 or GTA02 battery, plug USB power, then switch to the empty battery. 
+* Recharge the dead battery with an external stand-alone charger (compatible with the Nokia BL-5C battery) 
+* Boot the FreeRunner with either a spare GTA01 or GTA02 battery or a compatible battery, then plug in USB power and swap the dead battery into the FreeRunner while it's booted up and running. 
 * Boot the FreeRunner with a 4.5VDC external power source (steady hand and great care involved), plug USB power, then insert the empty battery.
 * Charge the battery directly, [http://wiki.openmoko.org/wiki/Charging_battery_directly see here], how I did that.
+
+The first option is probably the easiest and most sensible.
 
 == Compatible Replacement Batteries ==
 
