*Empty MediaWiki Message*

--- a/Gsmd.mw
+++ b/Gsmd.mw
@@ -3,7 +3,7 @@
 
 Further technical details and API documentation in progress, is available [[Gsmd/document |here]].
 
-Note that this does not hold for phones running [[Om2008.08]] - then gsmd has been replaced with [[Qtopia]]'s mobile stack. Installing gsmd and related tools will conflict with qpe and things may not work. 
+Note that this does not hold for phones running [[Om_2008.08]] - then gsmd has been replaced with [[Qtopia]]'s mobile stack. Installing gsmd and related tools will conflict with qpe and things may not work. 
 
 == Usage ==
 
