redirect to proper wiki page

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -333,24 +333,7 @@ The FreeRunner has the same processor as the Neo1973.
 
 ====Can the Neo charge and use devices on a USB hub at the same time? ====
 
-
-*When the Neo is connected to a device port on a USB hub, it will start charging. If the hub is a powered hub, then it will charge fast (3h), otherwise around 12h.
-
-*If you plug the Neo into the host port of a USB hub you can use devices on that hub but the Neo will not charge. (Some/many USB hubs will not accept an unpowered host as valid, hence the need for the below cable.)
-*This is because the host socket on USB hubs is not powered.
-
-FIC product development is looking into providing something that
-conveniently solves this problem.
-
-The USB port on the Neo is not a properly compliant USB host port, all USB host ports must provide 5V - though powered devices or hubs may not draw any current from this, they may refuse to work. (The Belkin Tetrahub is an example of a hub that will not work.)
-
-One solution is a three headed cable.
-
-One end plugs into the Neo. One end plugs into a device port of a powered hub, or the Neo charger. One end plugs into the host port of a hub.
-
-The Charger/USB device plug only has +5V and 0V connected in the simple cable, which are connected to the other ends.
-
-For a more complex cable, when the host socket is not plugged in, the cable acts as a simple USB cable.
+See [[USB_host#Providing_power_to_run_and_charge_the_Neo_while_in_host_mode|here]]
 
 ====What are the details of the USB port on the Neo? How does it compare to USB On-The-Go? ====
 
