redirect to mailing list

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -354,7 +354,7 @@ Yes
 
 ===What can we expect in future versions? ===
 
-A faster CPU, faster GSM (EDGE?) perhaps even powered USB port, USB2, wifi, and camera. No details have been released yet. More details of hardware upgrades should be available sometime in May. There will also be 5 more Openmoko devices - some not phones in the traditional sense - announced by FIC in September.
+Please join one of the [[lists.openmoko.org|mailing lists]] to follow and participate in this discussion.
 
 ===Are microSDHC-cards like this[1] supported? ===
 
