redirect to proper wiki page

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -356,9 +356,10 @@ Yes
 
 Please join one of the [[lists.openmoko.org|mailing lists]] to follow and participate in this discussion.
 
-===Are microSDHC-cards like this[1] supported? ===
+===What microSDHC-cards are supported? ===
 
-[1] http://www.amazon.de/Secure-Digital-Card-microSDHC-8192MB/dp/B0019XICD4/ref=pd_sbs_pc_15
+
+See [[Supported_microSD_cards|here]]
 
 ==Networking/Connectivity==
 
