--- a/Wish_List.mw
+++ b/Wish_List.mw
@@ -1177,6 +1177,7 @@ Get carriers to give you an Openmoko like they will give away other phones when 
 * '''GPS proxy''' - allowing other people to use and share GPS data from NEO over bluetooth  {{Main|Wishlist:Software:GPS proxy}} 
 * Location-based ToDo reminders. The GPS system allows for locations to be tagged (e.g. Parents' House, Pharmacy). The ToDo list should allow each item to be tagged with one ot more locations where the objective can be performed. When at or near that location the user would be presented with a reminder. For example when driving to my parents' house my Openmoko phone would see that I am near the pharmacy I tagged as a location and remind me of the "Pick up toothpaste" item on my ToDo list. Then, when at my parents' house my Openmoko phone would remind me of the "Pickup DVD from parents" item on my ToDo list.
 <br>[[Community Based Traffic Information]]
+** Create a '''boat-like compass application''' : using the accelerometers it can know its orientation and thus show the north precisely with an arrow "parallel" to the surface of the earth.
 
 == Hardware ==
 {{Main|Wish List - Hardware}}
