moved charge question to neo freerunner

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -93,6 +93,10 @@ See [[Getting_Started_with_your_Neo_FreeRunner|Getting Started with your Neo Fre
 # Contact your network provider and request a new SIM card. You may wish to print out the table mentioned above and bring it with you to the store.
 # Add your experience with the new SIM card to the table mentioned above
 
+===Can the Neo charge and use devices on a USB hub at the same time? ===
+
+See [[USB_host#Providing_power_to_run_and_charge_the_Neo_while_in_host_mode|here]]
+
 === 2007.2 factory default software image ===
 
 ==== Where can I download and reinstall the factory default image? ====
@@ -330,10 +334,6 @@ The only limitation on current hardware seems to be no usb 2.0 support, which me
 The processor has USB 1.1 built in. One with USB2 built in would have been more expensive, and might not be open.
 
 The FreeRunner has the same processor as the Neo1973.
-
-====Can the Neo charge and use devices on a USB hub at the same time? ====
-
-See [[USB_host#Providing_power_to_run_and_charge_the_Neo_while_in_host_mode|here]]
 
 ====What are the details of the USB port on the Neo? How does it compare to USB On-The-Go? ====
 
