added can not charge when turned off

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -93,6 +93,12 @@ See [[Getting_Started_with_your_Neo_FreeRunner|Getting Started with your Neo Fre
 # Contact your network provider and request a new SIM card. You may wish to print out the table mentioned above and bring it with you to the store.
 # Add your experience with the new SIM card to the table mentioned above
 
+== Can the Neo FreeRunner charge when turned off? When suspended? ==
+
+The Neo FreeRunner can '''not''' charge when turned off.
+
+The Neo FreeRunner '''can''' charge when suspended.
+
 ===Can the Neo charge and use devices on a USB hub at the same time? ===
 
 See [[USB_host#Providing_power_to_run_and_charge_the_Neo_while_in_host_mode|here]]
