--- a/FAQ.mw
+++ b/FAQ.mw
@@ -93,7 +93,7 @@ See [[Getting_Started_with_your_Neo_FreeRunner|Getting Started with your Neo Fre
 # Contact your network provider and request a new SIM card. You may wish to print out the table mentioned above and bring it with you to the store.
 # Add your experience with the new SIM card to the table mentioned above
 
-== Can the Neo FreeRunner charge when turned off? When suspended? ==
+=== Can the Neo FreeRunner charge when turned off? When suspended? ===
 
 The Neo FreeRunner can '''not''' charge when turned off.
 
