--- a/FAQ.mw
+++ b/FAQ.mw
@@ -86,6 +86,14 @@ A list of examples of "closed" behaviour has been started here - [[Problems of t
 
 See [[Getting_Started_with_your_Neo_FreeRunner|Getting Started with your Neo FreeRunner]]
 
+=== Are there any known issues? ===
+
+Issues relating to software are in the "known issues" section for each distribution. All distributions start [[Distributions|here]].
+
+Issues relating to firmware and hardware are in [[Neo_FreeRunner_Hardware_Issues|Neo FreeRunner Hardware Issues]]
+
+Note that some issues might involve a combination of hardware and software
+
 === My FreeRunner won't register to my cellphone network. What should I do? ===
 
 # Please document your existing SIM card and provider in the table [[FreeRunner_unable_to_work_with_3G_SIM_cards|here]]
