Add a letter to the interested wiki contributor and Patrol duties. Add a few Action !

--- a/Edit_Wiki.mw
+++ b/Edit_Wiki.mw
@@ -6,7 +6,9 @@ If you are extra cautious or want to get familliar with the system, go to the [[
 
 Then some people move to larger contributions, perhaps fixing a broken reference, adding a missing item in a list, or updating an outdated paragraph. Don't worry about being incomplete or about fine-tuning the language. Wiki means "fast" in Hawaïan, so if you have any information to share, go for it !
 
-==Tips for advanced wiki editors==
+== How can I help ? ==
+
+'''Update !'''. The most important contribution is to report relevant facts, or fix potentially misleading inaccuracies.
 
 '''Reformat !''' these pages explain how to write and format text the Mediawiki way:
 * [http://meta.wikimedia.org/wiki/Help:Wikitext_examples MediaWiki Wikitext Examples]
@@ -21,8 +23,41 @@ Then some people move to larger contributions, perhaps fixing a broken reference
 
 '''Categorize !''' If you create a new wiki page, please visit [[Openmoko Wiki Categories Index Page|Openmoko Wiki Categories Index Page]] to see the available categories and please put your page on the right category. This will make it easier for wiki users to find your page. There is a dynamic [[Special:Categories| List of existing categories]].
 
-'''Tag !''' In addition to making "List of #" pages, and categorizing, templates provide a powerful way to annotate pages quickly and visibly. See [[Templates]] - Templates with examples
+'''Tag !''' In addition to making "List of #" pages, and categorizing, templates provide a powerful way to annotate pages quickly and visibly. See [[Templates]] - Templates with examples. Tag obsolete pages with { { delete } }, for example.
 
 '''Explore !''' The 'toolbox' in the left column allows to browse the wiki faster. For example [[Special:Specialpages]] - List and find various content. For the full picture of Openmoko Wiki, please visit the [[Openmoko Wiki Official Index Page|Openmoko Wiki Official Index Page]].
+
+'''Patrol !''' The wiki newpages patrol gets the pleasure to look early at cool fresh content from the community, categorize it and generally help to integrate it in the information structure. The wiki mailing lists patrol follows the discussions and dutifully harvests the glimmering pearls of wisdoms and shining tricks to store on the Wiki (oftentimes, finding that someone else has beaten him/her to it).
+
+== Letter to an interested editor ==
+
+Hi ***You***,
+ 
+Welcome to the documentation team.
+ 
+Want to know what is happening in the Wiki this September ?
+
+Glad you asked. Well, you see, we are storming the place to turn the big disorganized pile of words into a useful (and hopefully someday good looking) reference site. Things have improved a lot already, but the categorization is still being redone (I think a hierarchical approach cannot work well, but that's just me). Meanwhile, we are also learning
+how to use Wikimedia (what are templates, namespaces, subpages, how to archive properly etc...) and writing our own guidelines. So it's still starting, you are not late to the party.
+
+We have not done much on the social organization side. So the governance model, if you may call it as such, is the default one in Open Source. Just add our name to http://wiki.openmoko.org/wiki/Wiki_Maintainers, share viewpoints on the mailing list and use the 'Discussion' pages of the wiki. To the best of my knowledge, we have not anything formal and none of the community members has elevated priviledges. Sysops (wiki administrators) are Brenda (coolcat) and Michael S. both from Openmoko
+[http://wiki.openmoko.org/index.php?title=Special%3AListusers&username=&group=sysop&limit=50 and a few others]
+, [http://www.mediawiki.org/wiki/Manual:Administrators which means only they can lock or delete pages].
+
+Traditionally we have left it to Brenda to update the navigation bar templates, after discussing modifications here. So how precisely do you suggest to make it better ?
+
+As for the big level structure, so far we have been thinking about how to clearly separate user and developper oriented pages, with a half conclusion that we should categorize better (I am not sure how, though. Must check the guidelines. Or convince the others to write them the right way.). I think that the "Key pages" navigation box can potentially give a multi-page narrative story, structure chapters if you prefer.
+
+ http://wiki.openmoko.org/wiki/Om_2008.8
+ http://wiki.openmoko.org/wiki/FreeRunner_Overview
+
+I agree that we have too many navigation boxes. IMHO the three on the left column should be revised to two, but see above about the left navigation. I also think that having "Table of content" + "Key pages" + "Language chooser" + the usual wiki header stuff is hard on the eyes of the persons of good typographical taste, but I don't have time to propose and implement a better page layout. If you want ideas on what to do, I would say that giving a more uniform look to all the "Key pages on Om 2008.8" would be an easy, significant and visible contribution.
+ 
+As for translation, we have been too busy with content to think about it. I guess we are waiting for the translators to team up themselves and take charge. Here is another exciting task for You !
+
+Replacing "Main page" with something else is technically beyond the power of wiki editors.
+
+Yours,
+[[User:MinhHaDuong|MinhHaDuong]] 19:16, 2 September 2008 (UTC)
 
 [[Category:Wiki Editing]]
