/* PMU/Charger Issue */

--- a/Neo_FreeRunner_Hardware_Issues.mw
+++ b/Neo_FreeRunner_Hardware_Issues.mw
@@ -32,11 +32,11 @@ Please change accordingly in /usr/share/openmoko/scenarios/gsmhandset.state. Sho
 
 ==== PMU/Charger Issue ====
 
-Issue: The device may fail to boot or charge the battery if the battery is deeply discharged (far enough that its internal protection circuitry is activated). See for example this thread on the [http://lists.openmoko.org/pipermail/openmoko-kernel/2008-June/003326.html kernel list].
+Issue: Neo FreeRunner requires battery power to boot, because Neo FreeRunner consumes too much current while booting to boot with only a charger. Since charging isn't enabled until the Neo FreeRunner has booted, this means that a discharged battery can not be charged.
 
-If the battery's terminal voltage is low but greater than zero then the Neo1973 recovery method may work: Disconnect USB, remove the battery, wait 10 seconds, re-insert the battery, re-connect USB, let it charge for 1 hour (or more) without pressing any buttons.
+See [[Getting_Started_with_your_Neo_FreeRunner#Charging_the_Neo_FreeRunner|Charging the Neo FreeRunner]] or [[Neo_FreeRunner_Battery#What_to_do_if_your_battery_has_become_completely_discharged|What to do if your battery has become completely discharged]].
 
-Affects: Unknown. Some discussions on the mailing list may refer to pre-production devices. 
+Affects: Unknown.
 
 Status: Fixed(?) with [http://lists.openmoko.org/pipermail/openmoko-kernel/2008-July/003799.html Werner Almesberger patches] - [http://lists.openmoko.org/pipermail/commitlog/2008-July/005403.html more here] [http://lists.openmoko.org/pipermail/community/2008-July/023392.html additional information]
 
