/* What is the Neo FreeRunner? */ Del third 'l' in celllphone

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -10,7 +10,7 @@ Openmoko is a Linux distribution designed for open mobile computing platforms, s
 Openmoko is the company behind the Openmoko Linux distribution. Openmoko also manufactures mobile computing platforms, such as the Neo FreeRunner.
 
 ===What is the [[Neo FreeRunner]]? === 
-The [[Neo FreeRunner]] is an open celllphone designed for the Openmoko Linux distribution. By open we mean that (a) all chips have been chosen to allow their drivers to be completely open sourced and (b) the schematics and the plastic (CAD) files are available as well.
+The [[Neo FreeRunner]] is an open cellphone designed for the Openmoko Linux distribution. By open we mean that (a) all chips have been chosen to allow their drivers to be completely open sourced and (b) the schematics and the plastic (CAD) files are available as well.
 
 ===I'm a programmer. How do I join the Openmoko project? ===
 
