--- a/Om_2008_Locations.mw
+++ b/Om_2008_Locations.mw
@@ -31,7 +31,7 @@ Once you are connected to GPS, saving and sending tags to friends is fun and sim
 * '''Save''' a Tag
 # Press the '''touch me''' bubble that hovers above your current position.
 # After the message box appears, tap directly into the text boxes under ''Edit Title'' and ''Edit Messages'' to add your ''Tag'' title or message.
-# After entering your title or message, press '''SAVE''', at which point your newly created ''Tag'' will appear in bot '''MAP''' and '''LIST''' views.
+# After entering your title or message, press '''SAVE''', at which point your newly created ''Tag'' will appear in both '''MAP''' and '''LIST''' views.
 # In the '''MAP''' view, tapping on the text of your ''Tag'' provides further options to ''edit'' or ''send'' your your ''Tag'' to a friend.
 
 * '''Send''' a Tag
