--- a/Getting_Started_with_your_Neo_FreeRunner.mw
+++ b/Getting_Started_with_your_Neo_FreeRunner.mw
@@ -72,12 +72,7 @@ Before using the Neo FreeRunner for the first time, you should charge the batter
 
 Charging an empty battery at 100mA takes 12~15 hours, at 500mA takes 2,5~3,5 hours, and at 1000mA takes 1.5~2.5 hours. (90%~100%) [to be confirmed]
 
-IMPORTANT: '''Make sure that the battery never discharges completely'''. This is an issue because the internal charging circuitry can not be turned on until the FreeRunner has booted, and booting through USB power alone does not work reliably. Should the battery become completely discharged, your options are:
-* Use external stand-alone charger (compatible with the Nokia BL-5C battery)
-* Boot the FreeRunner with an alternative battery, or with a spare GTA01 or GTA02 battery, plug USB power, then switch to the empty battery.
-* Boot the FreeRunner with a 4.5VDC external power source (steady hand and great care involved), plug USB power, then insert the empty battery.
-
-[[Neo_FreeRunner_Battery]]
+IMPORTANT: See [[Neo_FreeRunner_Hardware_Issues|Neo FreeRunner Hardware Issues]] about not allowing the battery to discharge completely.
 
 ===Buttons and connectors===
 
