more workarounds added

--- a/Neo_FreeRunner_Hardware_Issues.mw
+++ b/Neo_FreeRunner_Hardware_Issues.mw
@@ -34,13 +34,25 @@ Please change accordingly in /usr/share/openmoko/scenarios/gsmhandset.state. Sho
 
 Issue: Neo FreeRunner requires battery power to boot, because Neo FreeRunner consumes too much current while booting to boot with only a charger. Since charging isn't enabled until the Neo FreeRunner has booted, this means that a discharged battery can not be charged.
 
-See [[Getting_Started_with_your_Neo_FreeRunner#Charging_the_Neo_FreeRunner|Charging the Neo FreeRunner]] or [[Neo_FreeRunner_Battery#What_to_do_if_your_battery_has_become_completely_discharged|What to do if your battery has become completely discharged]].
-
 Affects: Unknown.
 
-Status: Fixed(?) with [http://lists.openmoko.org/pipermail/openmoko-kernel/2008-July/003799.html Werner Almesberger patches] - [http://lists.openmoko.org/pipermail/commitlog/2008-July/005403.html more here] [http://lists.openmoko.org/pipermail/community/2008-July/023392.html additional information]
+Status: By properly sequencing module power sequence, a software solution to this problem should exist.
 
-Workarounds: See http://lists.openmoko.org/pipermail/community/2008-July/021556.html
+Fixed(?) with [http://lists.openmoko.org/pipermail/openmoko-kernel/2008-July/003799.html Werner Almesberger patches] - [http://lists.openmoko.org/pipermail/commitlog/2008-July/005403.html more here] [http://lists.openmoko.org/pipermail/community/2008-July/023392.html additional information]
+
+Workarounds: 
+
+# See http://lists.openmoko.org/pipermail/community/2008-July/021556.html
+# Make sure that the battery never discharges completely
+# Use external stand-alone charger (compatible with the Nokia BL-5C battery)
+# Boot the FreeRunner with an alternative battery, or with a spare GTA01 or GTA02 battery, plug USB power, then switch to the empty battery.
+# Boot the FreeRunner with a 4.5VDC external power source (steady hand and great care involved), plug USB power, then insert the empty battery.
+# [[Charging_battery_directly|Charge the battery directly]] (not recommended! even greater care is required).
+# Some users have reported that Neo FreeRunner '''is''' able to boot on USB power alone using the NOR u-boot, thus: press AUX, plug USB power, select boot. Reports of success would be appreciated.
+
+See also:
+:[[Neo_FreeRunner_Battery#What_to_do_if_your_battery_has_become_completely_discharged|What to do if your battery has become completely discharged]]
+:[[Neo_FreeRunner_Battery|Neo FreeRunner Battery]]
 
 ==== Some SIMs Don't Work ====
 
