--- a/Neo_FreeRunner_Hardware_Issues.mw
+++ b/Neo_FreeRunner_Hardware_Issues.mw
@@ -23,12 +23,11 @@ The source of the GSM buzz has been [http://lists.openmoko.org/pipermail/hardwar
 
 Some [http://lists.openmoko.org/pipermail/hardware/2008-August/000451.html hidden Calypso commands] may help with the echo problem.
 
-Workarounds: Using a bluetooth headset is a possibility. 
+Workarounds: 
 
-===== Better mixer settings =====
+# Using a bluetooth headset is a possibility. 
 
-One confirmed good settings are here: http://www.mail-archive.com/support@lists.openmoko.org/msg00564.html
-Please change accordingly in /usr/share/openmoko/scenarios/gsmhandset.state. Should eliminate/lessen echo and buzz problems.
+# Better mixer settings: One confirmed good settings are here: http://www.mail-archive.com/support@lists.openmoko.org/msg00564.html. Please change accordingly in /usr/share/openmoko/scenarios/gsmhandset.state. Should eliminate/lessen echo and buzz problems.
 
 ==== PMU/Charger Issue ====
 
