/* PMU/Charger Issue */

--- a/Neo_FreeRunner_Hardware_Issues.mw
+++ b/Neo_FreeRunner_Hardware_Issues.mw
@@ -43,7 +43,7 @@ Workarounds:
 
 # Make sure that the battery never discharges completely
 # Use external stand-alone charger (compatible with the Nokia BL-5C battery)
-# Boot the FreeRunner with an alternative battery (e.g. Nokia BL-4C or Nokia BL-5C), or with a spare GTA01 or GTA02 battery, plug USB power, then switch to the empty battery.
+# Boot the FreeRunner with an [[Neo_FreeRunner_Battery#Compatible_Replacement_Batteries|alternative battery]], or with a spare GTA01 or GTA02 battery, plug USB power, then switch to the empty battery.
 # Boot the FreeRunner with a 4.5VDC external power source (steady hand and great care involved), plug USB power, then insert the empty battery.
 # [[Charging_battery_directly|Charge the battery directly]] (not recommended! even greater care is required).
 # Some users have reported that Neo FreeRunner '''is''' able to boot on USB power alone using the NOR u-boot, thus: press AUX, plug USB power, select boot. Reports of success would be appreciated.
