--- a/BitBake.mw
+++ b/BitBake.mw
@@ -1,5 +1,5 @@
 {{Languages|BitBake}}
-BitBake is the build tool used by [[OpenEmbedded]]. BitBake recipes are simple, declarative files. Here is an example for the openmoko-calculator2 application:
+BitBake is the build tool used by [[OpenEmbedded]]. [[BitBake recipe]]s are simple, declarative files. Here is an example for the openmoko-calculator2 application:
 
  DESCRIPTION = "A Calculator for Openmoko"
  SECTION = "openmoko/tools"
