/* I'd like to develop a product (software application, custom hardware) based on Openmoko and/or the Neo FreeRunner. How do I get started? */

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -24,9 +24,9 @@ Start or join an [[http://projects.openmoko.org/ Openmoko project]]
 
 Absolutely. If your a visual artist, you can help us with icons and other visuals. Musicians can help contribute ringtones and other sounds. Marketing? Sales? Information visualization? Join the community mailing lists, introduce yourself, and you'll soon find a place to put your skills to good use.
 
-===I'd like to develop a product (software application, custom hardware) based on Openmoko and/or the Neo FreeRunner. How do I get started? ===
+===I'd like to develop a custom product or application based on Openmoko and/or the Neo FreeRunner. How should I proceed? ===
 
- Send mail to michael@openmoko.org or to steve@openmoko.com
+Send mail to michael@openmoko.org or to steve@openmoko.com
 
 ===Where can I buy the [[Neo FreeRunner]]? ===
 
