added alternate distributions

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -111,6 +111,11 @@ The Neo FreeRunner '''can''' charge when suspended.
 
 See [[USB_host#Providing_power_to_run_and_charge_the_Neo_while_in_host_mode|here]]
 
+===What alternate distributions are available for the Neo FreeRunner?===
+
+
+See [[Distributions|Distributions]]
+
 === 2007.2 factory default software image ===
 
 ==== Where can I download and reinstall the factory default image? ====
